force-app/main/default/objects/Lead/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account Number</description>
    <displayFormat>ACC-{YY}{MM}-{00000}</displayFormat>
    <label>Account Number NOT IN USE</label>
    <type>AutoNumber</type>
</CustomField>