force-app/main/default/objects/Lead/fields/Billing_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Email__c</fullName>
    <label>Billing Email NOT IN USE</label>
    <type>Email</type>
</CustomField>