force-app/main/default/objects/Lead/fields/Caller_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_First_Name__c</fullName>
    <label>Caller First Name NOT IN USE</label>
    <length>40</length>
    <type>Text</type>
</CustomField>