force-app/main/default/objects/Lead/fields/Caller_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_Last_Name__c</fullName>
    <label>Caller Last Name NOT IN USE</label>
    <length>80</length>
    <type>Text</type>
</CustomField>