force-app/main/default/objects/Lead/fields/Check_in_Time_Mins__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Time_Mins__c</fullName>
    <label>Check-in Time (Mins) NOT IN USE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>