force-app/main/default/objects/Lead/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County NOT IN USE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>