force-app/main/default/objects/Lead/fields/EGT_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EGT_Annual_Revenue__c</fullName>
    <description>Calculated annual revenue from Exterior Grease Trap (EGT) services based on service rate and frequency.</description>
    <formula>IF(OR(ISBLANK(EGT_Frequency_Days__c), EGT_Frequency_Days__c = 0), 0, (365 / EGT_Frequency_Days__c) * EGT_Rate__c)</formula>
    <inlineHelpText>Automatically calculated: (365 / EGT Frequency Days) × EGT Rate. Returns 0 if frequency is blank or zero.</inlineHelpText>
    <label>EGT Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>