force-app/main/default/objects/Lead/fields/EGT_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>EGT_Frequency_Days__c</fullName>
    <description>Number of days between Exterior Grease Trap (EGT) service visits. Used to calculate annual service frequency and EGT revenue.</description>
    <inlineHelpText>Enter the number of days between EGT service visits (e.g., 30 for monthly service).</inlineHelpText>
    <label>EGT Frequency Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>