force-app/main/default/objects/Lead/fields/EGT_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>EGT_Monthly_Revenue__c</fullName>
    <description>Calculated monthly revenue from Exterior Grease Trap (EGT) services projected from annual revenue.</description>
    <formula>EGT_Annual_Revenue__c / 12</formula>
    <inlineHelpText>Automatically calculated: EGT Annual Revenue / 12.</inlineHelpText>
    <label>EGT Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>