force-app/main/default/objects/Lead/fields/EGT_Rate__c.field-meta.xml
<CustomField>
    <fullName>EGT_Rate__c</fullName>
    <description>Service rate charged per Exterior Grease Trap (EGT) cleaning visit. Used to calculate EGT revenue.</description>
    <inlineHelpText>Enter the amount charged per EGT service visit.</inlineHelpText>
    <label>EGT Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>