force-app/main/default/objects/Lead/fields/FSE_Name__c.field-meta.xml
<CustomField>
    <fullName>FSE_Name__c</fullName>
    <description>Food Service Establishment / Restaurant Name</description>
    <inlineHelpText>Leave this field blank if it is the same as the Account Name.</inlineHelpText>
    <label>FSE Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>