force-app/main/default/objects/Lead/fields/Gallons_of_Oil_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Gallons_of_Oil_per_Month__c</fullName>
    <label>Gallons of Oil per Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>