force-app/main/default/objects/Lead/fields/HYD_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HYD_Annual_Revenue__c</fullName>
    <description>Calculated annual revenue from Hydro Jetting / Drain Cleaning (HYD) services based on service rate and frequency.</description>
    <formula>IF(OR(ISBLANK(HYD_Frequency_Days__c), HYD_Frequency_Days__c = 0), 0, (365 / HYD_Frequency_Days__c) * HYD_Rate__c)</formula>
    <inlineHelpText>Automatically calculated: (365 / HYD Frequency Days) × HYD Rate. Returns 0 if frequency is blank or zero.</inlineHelpText>
    <label>HYD Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>