force-app/main/default/objects/Lead/fields/HYD_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>HYD_Frequency_Days__c</fullName>
    <description>Number of days between Hydro Jetting / Drain Cleaning (HYD) service visits. Used to calculate annual service frequency and HYD revenue.</description>
    <inlineHelpText>Enter the number of days between HYD service visits (e.g., 30 for monthly service).</inlineHelpText>
    <label>HYD Frequency Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>