force-app/main/default/objects/Lead/fields/HYD_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>HYD_Monthly_Revenue__c</fullName>
    <description>Calculated monthly revenue from Hydro Jetting / Drain Cleaning (HYD) services projected from annual revenue.</description>
    <formula>HYD_Annual_Revenue__c / 12</formula>
    <inlineHelpText>Automatically calculated: HYD Annual Revenue / 12.</inlineHelpText>
    <label>HYD Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>