force-app/main/default/objects/Lead/fields/HYD_Rate__c.field-meta.xml
<CustomField>
    <fullName>HYD_Rate__c</fullName>
    <description>Service rate charged per Hydro Jetting / Drain Cleaning (HYD) service visit. Used to calculate HYD revenue.</description>
    <inlineHelpText>Enter the amount charged per HYD service visit.</inlineHelpText>
    <label>HYD Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>