force-app/main/default/objects/Lead/fields/IGT_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IGT_Monthly_Revenue__c</fullName>
    <description>Calculated monthly revenue from Indoor Grease Trap (IGT) services projected from annual revenue.</description>
    <formula>IGT_Annual_Revenue__c / 12</formula>
    <inlineHelpText>Automatically calculated: IGT Annual Revenue / 12.</inlineHelpText>
    <label>IGT Monthly Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>