force-app/main/default/objects/Lead/fields/IGT_Rate__c.field-meta.xml
<CustomField>
    <fullName>IGT_Rate__c</fullName>
    <description>Service rate charged per Indoor Grease Trap (IGT) cleaning visit. Used to calculate IGT revenue.</description>
    <inlineHelpText>Enter the amount charged per IGT service visit.</inlineHelpText>
    <label>IGT Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>