force-app/main/default/objects/Lead/fields/Indoor_Container__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Container__c</fullName>
    <label>Indoor Container</label>
    <length>20</length>
    <type>Text</type>
</CustomField>