force-app/main/default/objects/Lead/fields/Outdoor_Container__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Container__c</fullName>
    <label>Outdoor Container</label>
    <length>20</length>
    <type>Text</type>
</CustomField>