force-app/main/default/objects/Lead/fields/Outdoor_Garbage_Containment__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Garbage_Containment__c</fullName>
    <label>Outdoor Garbage Containment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>