force-app/main/default/objects/Lead/fields/Previous_Provider__c.field-meta.xml
<CustomField>
    <fullName>Previous_Provider__c</fullName>
    <label>Previous Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>