force-app/main/default/objects/Lead/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <description>Used Cooking Oil, Grease Trap, Interceptor, Drain Cleaning</description>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UCO</fullName>
            </value>
            <value>
                <fullName>IGT</fullName>
            </value>
            <value>
                <fullName>EGT</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>WR</fullName>
                <isActive>false</isActive>
                <label>WR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>