force-app/main/default/objects/Lead/fields/UCO_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>UCO_Annual_Revenue__c</fullName>
    <description>Calculated annual revenue from UCO (Used Cooking Oil) collection projected from monthly revenue.</description>
    <formula>UCO_Monthly_Revenue__c * 12</formula>
    <inlineHelpText>Automatically calculated: UCO Monthly Revenue × 12.</inlineHelpText>
    <label>UCO Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>