force-app/main/default/objects/Lead/fields/UCO_Commodity_Value__c.field-meta.xml
<CustomField>
    <fullName>UCO_Commodity_Value__c</fullName>
    <defaultValue>4.81</defaultValue>
    <description>Current commodity value per gallon for Used Cooking Oil (UCO). Used to calculate UCO revenue.</description>
    <inlineHelpText>The current market value per gallon of UCO. Default value is $4.81.</inlineHelpText>
    <label>UCO Commodity Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>