force-app/main/default/objects/Lead/validationRules/Validate_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(  Street ),
ISBLANK(  City ),
ISBLANK(  State ),
ISBLANK(  PostalCode ),
ISBLANK(  Country ) )</errorConditionFormula>
    <errorMessage>Please provide Address Street/City/State/PostalCode/Country information</errorMessage>
</ValidationRule>